--- a/style.css
+++ b/style.css
@@ -51,6 +51,10 @@ body {
     flex-direction: column;
 }
 
+.nav_elem {
+    text-align: center;
+}
+
 .container_item_div img {
     border: 4px solid rgb(36, 36, 36);
     width: 300px;
